# zephyr

./: CMakeLists.txt  Kconfig.zephyr  MAINTAINERS.yml
cmake/: canopen.cmake  gcc-m-cpu.cmake
cmake/app/: boilerplate.cmake
cmake/modules/: kernel.cmake
doc/releases/: migration-guide-4.4.rst  migration-guide-4.5.rst
drivers/can/: Kconfig.sam0  can_mcan.c  can_sam0.c  can_shell.c  can_tcan4x5x.c
drivers/counter/: CMakeLists.txt  Kconfig  Kconfig.pcf8523  counter_pcf8523.c
drivers/display/: CMakeLists.txt  Kconfig  Kconfig.ssd1331  ssd1331.c
drivers/gpio/: CMakeLists.txt  Kconfig  Kconfig.xlnx  gpio_hog.c  gpio_hogs.c  gpio_mcux.c  gpio_neorv32.c  gpio_xlnx_axi_iic_gpo.c
drivers/i2c/: CMakeLists.txt  Kconfig  i2c_context.h  i2c_xlnx_axi_iic.c
drivers/i2s/: CMakeLists.txt  Kconfig.mcux_flexcomm  i2s_mcux_flexcomm.c
drivers/misc/: CMakeLists.txt  Kconfig  Kconfig.mcux  mcux_flexio.c
kernel/: Kconfig.obj_core  queue.c
modules/: Kconfig.mcux
samples/subsys/canbus/canopen/conformance/: CMakeLists.txt  Kconfig  README.rst  prj.conf  sample.yaml
samples/subsys/canbus/canopen/conformance/objdict/: objdict.eds
samples/subsys/canbus/canopen/conformance/src/: main.c
scripts/: gen_canopen_objdict.py  requirements-base.txt  west-commands.yml
tests/subsys/canbus/canopen/: CMakeLists.txt  objdict.eds  prj.conf  testcase.yaml
tests/subsys/canbus/canopen/common/: test-cia301.cmake
tests/subsys/canbus/canopen/common/objdict/: test-cia301.eds
tests/subsys/canbus/canopen/indicators/: CMakeLists.txt  app.overlay  prj.conf  testcase.yaml
tests/subsys/canbus/canopen/indicators/src/: common.c  common.h  test_canopen_indicators_error_run.c  test_canopen_indicators_multicolor.c  test_canopen_indicators_status.c
tests/subsys/canbus/canopen/nmt/: CMakeLists.txt  app.overlay  prj.conf  testcase.yaml
tests/subsys/canbus/canopen/nmt/src/: test_canopen_nmt_fsa.c
tests/subsys/canbus/canopen/objdict/: test-cia301.eds
tests/subsys/canbus/canopen/od/: CMakeLists.txt  prj.conf  testcase.yaml
tests/subsys/canbus/canopen/od/src/: test_canopen_od_cia301.c  test_canopen_od_deftypes.c
tests/subsys/canbus/canopen/src/: objdict.c  objdict.h  test_canopen_od.c  test_canopen_od_cia301.c  test_canopen_od_deftypes.c
(+215 files in other folders)
